update dependencies add artillery

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "artillery": "^2.0.21",
     "cypress": "^13.14.2",
     "cypress-dotenv": "^2.0.0"
   }
